[gd_scene load_steps=4 format=3 uid="uid://bajqn8rjoqf33"]

[ext_resource type="Script" path="res://addons/scenegraph/SceneFileTree.gd" id="1_fnmrv"]
[ext_resource type="Script" path="res://addons/scenegraph/FileMenu.gd" id="1_jle6d"]
[ext_resource type="Script" path="res://addons/scenegraph/SceneGraph.gd" id="2_ccofw"]

[node name="SceneGraphDock" type="HBoxContainer"]
offset_right = 640.0
offset_bottom = 360.0
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="FileTreeMargin" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 5

[node name="FileTreeContainer" type="VBoxContainer" parent="HSplitContainer/FileTreeMargin"]
layout_mode = 2

[node name="FileMenu" type="MenuButton" parent="HSplitContainer/FileTreeMargin/FileTreeContainer"]
layout_mode = 2
text = "File"
alignment = 0
item_count = 7
popup/item_0/text = "New Scene Graph"
popup/item_0/id = 1
popup/item_1/text = ""
popup/item_1/id = 0
popup/item_1/separator = true
popup/item_2/text = "Load"
popup/item_2/id = 2
popup/item_3/text = "Save"
popup/item_3/id = 3
popup/item_4/text = "Save As..."
popup/item_4/id = 4
popup/item_5/text = ""
popup/item_5/id = 0
popup/item_5/separator = true
popup/item_6/text = "Close Scene Graph"
popup/item_6/id = 5
script = ExtResource("1_jle6d")

[node name="FileTree" type="Tree" parent="HSplitContainer/FileTreeMargin/FileTreeContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
hide_folding = true
hide_root = true
script = ExtResource("1_fnmrv")

[node name="FileDialogue" type="FileDialog" parent="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree"]
title = "Save Scene Graph"
initial_position = 4
size = Vector2i(600, 400)
ok_button_text = "Save"
dialog_hide_on_ok = true
dialog_close_on_escape = false
filters = PackedStringArray("*.tres ; Text Resource Files", "*.res ; Resource Files")

[node name="SceneTreeMargin" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="SceneGraph" type="GraphEdit" parent="HSplitContainer/SceneTreeMargin"]
visible = false
layout_mode = 2
minimap_enabled = false
show_zoom_label = true
script = ExtResource("2_ccofw")

[connection signal="CloseGraph" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" method="_on_close_graph"]
[connection signal="LoadGraph" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" method="_on_load_graph"]
[connection signal="NewGraph" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" method="_on_new_graph"]
[connection signal="SaveGraph" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" method="_on_save_graph"]
[connection signal="SaveGraphAs" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" method="_on_save_graph_as"]
[connection signal="graphClosed" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" to="HSplitContainer/SceneTreeMargin/SceneGraph" method="_on_file_tree_graph_closed"]
[connection signal="graphOpened" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" to="HSplitContainer/SceneTreeMargin/SceneGraph" method="_on_graph_opened"]
[connection signal="item_activated" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" method="_on_item_activated"]
[connection signal="file_selected" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree/FileDialogue" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" method="_on_file_selected"]
[connection signal="files_selected" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree/FileDialogue" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileTree" method="_on_files_selected"]
